# Adaptive_Trainer

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: minimum_dependency_checker.yml  publish-to-test-pypi.yml
adaptive_trainer/: __init__.py  collators.py  config.py  data_processors.py  trainers.py  training.py  utils.py
src/adaptive_trainer/: config.py  data_processors.py  training.py
tests/: example_usage.py
