[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-trainer"
version = "0.1.0"
description = "A Hugging Face Trainer extension for adaptive loss and ideas learning."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Samarth Pusalkar", email = "samarthpusalkar@gmail.com" }
]
license = { text = "License not specified. Contact samarthpusalkar@gmail.com" }
keywords = [
    "nlp", "machine learning", "deep learning", "transformers",
    "huggingface", "trainer", "adaptive loss", "ideas learning"
]
dependencies = [
    "torch>=2.6.0",
    "datasets>=3.6.0",
    "transformers>=4.51.3",
    "huggingface_hub>=0.31.1",
    "wandb>=0.19.11",
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5"
]

[project.optional-dependencies]
flash_attn = ["flash-attn>=2.7.4"]

[project.urls]
Homepage = "https://github.com/samarthpusalkar/Adaptive_Trainer"
Bug Tracker = "https://github.com/samarthpusalkar/Adaptive_Trainer/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[project.classifiers]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
