[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive_trainer"
version = "0.0.1"
authors = [
    { name = "Samarth Pusalkar", email = "samarthpusalkar@gmail.com" }
]
description = "A Hugging Face Trainer extension for adaptive loss and ideas learning."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "nlp", "machine learning", "deep learning", "transformers",
    "huggingface", "trainer", "adaptive loss", "ideas learning"
]
dependencies = [
    "torch>=2.6.0",
    "datasets>=3.6.0",
    "transformers>=4.52.3",
    "huggingface_hub>=0.31.1",
    "wandb>=0.19.11",
    "accelerate>=1.6.0"
]

[project.optional-dependencies]
flash_attn = ["flash-attn>=2.7.4", "bitsandbytes>=0.45.5"]

[project.urls]
Homepage = "https://github.com/samarthpusalkar/Adaptive_Trainer"
Issues = "https://github.com/samarthpusalkar/Adaptive_Trainer/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]
